# BevprogII_beadando3

./: .gitmodules  CMakeLists.txt  Jatekkmester.hpp  Jatekmester.hpp  Korong.cpp  Korong.hpp  Palya.cpp  Palya.hpp  README.md  Window.cpp  Window.hpp  gordmenu.cpp  gordmenu.hpp  main.cpp  pushbutton.cpp  pushbutton.hpp  szambeall.cpp  szambeall.hpp  widgets.cpp  widgets.hpp
